flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  ports:
    - name: http
      port: 5000 # This Service listens on port 5000 (inside the cluster)
      targetPort: 5000 #  Traffic sent to port 5000 on the Service gets forwarded to port 5000 on the target Pods
    - name: https # This Service listens on port 5000 (inside the cluster)
      port: 443  #Traffic sent to port 5000 on the Service gets forwarded to port 5000 on the target Pods
      targetPort: 443
  selector: # selector: → Specifies which Pods this Service routes traffic to
    app: flask-api
  type: ClusterIP
