postgres_service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432 # Service port
      targetPort: 5432 # Pod container port
  type: ClusterIP
